--- a/src/main/frontend/src/assets/css/Footer.scss
+++ b/src/main/frontend/src/assets/css/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 26px;
+    right: 32px;
     z-index: 1000;
 
     // 배경 효과
@@ -56,7 +56,7 @@
 
     // 호버 효과
     &:hover {
-        transform: translateY(-2px);
+        transform: translate(-2px, -2px);
     }
 }
 
